v1.1.5 2008-05-16
================
NEW STUFF:
- Added image ("I") transform capability with perceptual difference algorithm


v1.1.4 2008-04-25
================
NEW STUFF:
- Edit button functionality added for font records. Only character and font group can be changed. (BillW)

v1.1.3 2008-04-11
================
NEW STUFF:
- New symbol s$activemethod is now available.  This is used to determine how OH treats
  information from the pXactive and uXactive regions.
  - 1: (default, legacy) Inactive unless pXactive/uXactive returns true/active
  - 2: (new) Active unless pXactive/Uxactive returns false/inactive/out/away  (Thanks,
    Nick Coldhand)  (quiqsilver)


v1.1.2 2008-03-28
================
NEW STUFF:
- New symbol s$potmethod is now available.  This is used to determine the appropriate
  site interpretation for the contents of c0pot0.  s$potmethod can be set to these values:
  - 1: (default, legacy) Common pot
  - 2: (new) Total pot, including current bets and side bets  (Thanks, Nick Coldhand)
  (quiqsilver)


v1.1.1 2008-03-15
================
NEW STUFF:
- New symbol s$network is now available.  This is used to determine the appropriate
  network to pull Poker Tracker data for when s$sitename is not a PT supported site.  OH will
  first check s$sitename for a supported network name, then s$network.  These are the supported
  names for both s$sitename and s$network and must be lowercase: stars, party, ultimate, absolute,
  microgaming, ongame, cryptologic, pacific, fulltilt, b2b, tribeca, worldpex, ipoker, tain,
  bodog, everest, boss, and betfair. (quiqsilver)
  
- The entry window now has a status bar which displays common characters that are missing a font
  definition on the left side, and cards that are missing a hash on the right side for easy
  reference. (Thanks, Folder and dipitlow)
  - The entry window now has a "Tracker" section to set options for what is displayed in the status
    bar: (Thanks, Nick Coldhand)